taglist wraps, stops overflow

--- a/app/_components/components.module.css
+++ b/app/_components/components.module.css
@@ -92,6 +92,7 @@ closes the expansion when clicked
     list-style: none;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     padding: 0;
     margin: 0 auto;
 }
